<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutNoItemFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/icon_no_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@string/roboto_medium"
            android:text="@string/lbl_no_result"
            android:textColor="?textColorSecondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noItemMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@string/roboto_regular"
            android:text="@string/no_post_found"
            android:textColor="?textColorThird"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@string/roboto_light"
            android:text="@string/lbl_tap_to_retry"
            android:textAlignment="center"
            android:textColor="?textColorThird"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/icon_no_refresh"
            app:drawableTint="?textColorThird" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>
